--- a/HybridAPIFlow/HybridAPIFlow/HybridAPIFlow.csproj
+++ b/HybridAPIFlow/HybridAPIFlow/HybridAPIFlow.csproj
@@ -179,6 +179,8 @@
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\clipboard.js" />
+    <Content Include="Scripts\clipboard.min.js" />
     <Content Include="Scripts\esm\popper-utils.js" />
     <Content Include="Scripts\esm\popper-utils.min.js" />
     <Content Include="Scripts\esm\popper.js" />
