--- a/HybridAPIFlow/HybridAPIFlow/packages.config
+++ b/HybridAPIFlow/HybridAPIFlow/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net48" />
   <package id="bootstrap" version="4.5.3" targetFramework="net48" />
+  <package id="ClipboardJS" version="2.0.6" targetFramework="net48" />
   <package id="jQuery" version="3.6.0" targetFramework="net48" />
   <package id="jQuery.Validation" version="1.19.3" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net48" />
