added brand details in visuals

--- a/HybridAPIFlow/HybridAPIFlow/HybridAPIFlow.csproj
+++ b/HybridAPIFlow/HybridAPIFlow/HybridAPIFlow.csproj
@@ -166,11 +166,37 @@
     <Content Include="Content\gijgo\modular\timepicker.min.css" />
     <Content Include="Content\gijgo\modular\tree.css" />
     <Content Include="Content\gijgo\modular\tree.min.css" />
+    <Content Include="Content\Images\CarryOnChargeable.png" />
+    <Content Include="Content\Images\CarryOnIncluded.png" />
+    <Content Include="Content\Images\CarryOnNotOffered.png" />
+    <Content Include="Content\Images\CheckedBagChargeable.png" />
+    <Content Include="Content\Images\CheckedBagIncluded.png" />
+    <Content Include="Content\Images\CheckedBagNotOffered.png" />
     <Content Include="Content\Images\details_close.png" />
     <Content Include="Content\Images\details_open.png" />
+    <Content Include="Content\Images\Flight.png" />
     <Content Include="Content\Images\loading.gif" />
+    <Content Include="Content\Images\MealsChargeable.png" />
+    <Content Include="Content\Images\MealsIncluded.png" />
+    <Content Include="Content\Images\MealsNotOffered.png" />
+    <Content Include="Content\Images\O.png" />
+    <Content Include="Content\Images\RebookingChargeable.png" />
+    <Content Include="Content\Images\RebookingIncluded.png" />
+    <Content Include="Content\Images\RebookingNotOffered.png" />
+    <Content Include="Content\Images\RefundChargeable.png" />
+    <Content Include="Content\Images\RefundIncluded.png" />
+    <Content Include="Content\Images\RefundNotOffered.png" />
+    <Content Include="Content\Images\SeatAssignmentChargeable.png" />
+    <Content Include="Content\Images\SeatAssignmentIncluded.png" />
+    <Content Include="Content\Images\SeatAssignmentNotOffered.png" />
+    <Content Include="Content\Images\SeatsChargeable.png" />
+    <Content Include="Content\Images\SeatsIncluded.png" />
+    <Content Include="Content\Images\SeatsNotOffered.png" />
     <Content Include="Content\Images\TRAVELPORT_LOGO_RGB_Sand.svg" />
     <Content Include="Content\Images\TRAVELPORT_LOGO_RGB_Soft Black.svg" />
+    <Content Include="Content\Images\WiFiChargeable.png" />
+    <Content Include="Content\Images\WiFiIncluded.png" />
+    <Content Include="Content\Images\WiFiNotOffered.png" />
     <Content Include="Content\prism.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
